src/components/css/chatv2.css
/* chat style */
.chatv2 {
  flex-grow: 1;
  padding-top: 10px;
  padding-left: 30px;
  padding-right: 30px;
  border-left: 1px solid #E2E2E2;
  min-width: 300px;
  display: flex;
  flex-direction: column;
}

.chatv2--header {
  border-bottom: 1px solid #E2E2E2;
  padding-bottom: 2px;
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
  justify-content: space-between;
}

.chatv2--header--title {
  font-size: 20px;
  font-weight: 500;
  color: #333;
  text-decoration: none;
}

.chatv2--header--subtitle {
  margin-top: 10px;
  font-size: 14px;
  font-weight: 500;
}

.chatv2--username {
  margin-top: 20px;
  padding-left: 5px;
  margin-bottom: 20px;
  font-size: 16px;
}

.chatv2--messages {
  flex: 1;
  overflow-x: auto;
  overflow-y: auto;
  width: 100%;
  max-height: 550px;
  padding-bottom: 20px;
}

.chatv2--message {
  font-size: 15px;
  padding-left: 20px;
  word-wrap: break-word;
  display: flex;
  align-items: center;
}

.chatv2--message--sender {
  font-weight: bold;
  margin-left: -15px;
}

.chatv2--message--text {
  margin-left: 5px;
}

.big .chatv2--message--text {
  font-size: 200%;
}

.chatv2--bar {
  width: 100%;
  padding: 20px 0px 20px 0px;
}

.chatv2--bar--input {
  width: 100%;
}

